Thanks joeenzminger

+ Pie charts with zero in the array of values will no longer
cause IE to display "undefined" in the page (issue 9)

+ Null values in bar charts are now correctly omitted by default (issue 23)

+ Null values in line charts would cause value highligting to be
incorrect (issue 4)

+ Raise default z-index for tooltips to ensure they always appear on top
of the chart (issue 5)


2.0 29/April/2012

+ jQuery.sparkline now requires jQuery 1.4.3 or later

+ All charts now support mouseover and click actions
Adds options: disableInteraction, disableTooltips, disableHighlight

+ Added sparklineClick and sparklineRegionChange events

+ Line charts have highlightSpotColor and highlightLineColor options
for controlling mouseover highligiting

+ All charts display tooltips and highlight values when moused-over by default
Adds options: tooltipContainer, tooltipOffsetX, tooltipOffsetY, tooltipFormatter,
tooltipChartTitle, tooltipFormat, tooltipPrefix, tooltipSuffix, 
tooltipSkipNull, tooltipValueLookups, highlightLighten, numberFormatter, 
numberDigitGroupSep, numberDecimalMark, numberDigitGroupCount

+ Fix error when all null values are fed to a line chart
Thanks Ton Voon

+ Fix off-by-one error that caused the bottom of filled line charts to
be unlevel - Thanks Sylvain Vieujot for the bug report

+ Pie charts with a single value now render correctly
Thanks Juan Manuel

+ Charts that have their dimensions specified exactly in pixels may see 
improved performance
Thanks Sean Carpenter

+ Coloured spots may be added to some or all values on a line chart now using
the new valueSpots option
Thanks Russ Beebe for the suggestion

+ Bar and tristates charts now support using range of values for the colorMap
option - Eg. allows all bars with values betweeen 10 and 20 to be green

+ Pie charts may now have a border using the borderWidth and borderColor
options - Thanks Michael Mior for the suggestion
